tests/evaluate/success/funempty.src
// This tests if a function with empty parameters and body parses. This should evaluate.
main() {}
