tests/evaluate/fail/badifcondition.src
// If conditions should result in a boolean. This should not evaluate.
main() {
    if (9001) {} else {};
}
